# Project-Nova

./: .gitignore  HANDOFF.md  Project-Nova.md  README.md  TODO.md  install.sh  nova-open-terminal.sh  progress.md  uninstall.sh
nova-cortex/: .env.example  README.md  pyproject.toml
nova-cortex/nova/: __init__.py  main.py
nova-cortex/nova/core/: __init__.py  config.py  errors.py  event_loop.py  events.py  ipc_server.py  platform.py  report.py  state.py  storage.py
nova-cortex/nova/llm/: __init__.py  client.py  engine.py  output.py  pipeline.py  prompts.py  schema.py
nova-cortex/nova/memory/: __init__.py  embeddings.py  habit_tracker.py  vector_db.py
nova-cortex/nova/tools/: __init__.py  file_ops.py  registry.py
services/: nova-cortex.service
