[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-cortex"
version = "0.1.0"
description = "Project Nova Cortex core service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0"
]

[project.scripts]
nova-cli = "nova.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["nova*"]
